# fastly-vcl-with-rust

./: .editorconfig  Cargo.toml  build.js
src/: backends.json  lib.rs  main.rs
src/vcl/: backends.vcl.hbs  main.vcl.hbs
