[package]
name = "fastly-vcl-with-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
handlebars = "4.3.7"
serde = { version = "1.0.174", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.103"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["console"] }
